Mejoras UI Home: tarjetas de eventos más grandes, carrusel, banner visual si no hay lugares y ajustes visuales

--- a/app/src/main/res/layout/activity_validate_account.xml
+++ b/app/src/main/res/layout/activity_validate_account.xml
@@ -58,6 +58,18 @@
         android:textColor="@android:color/white"
         android:elevation="6dp"
         android:layout_below="@id/etValidationCode"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btnResendCode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reenviar código"
+        android:background="@drawable/btn_neon"
+        android:textColor="@android:color/white"
+        android:elevation="6dp"
+        android:layout_below="@id/btnValidateAccount"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"/>
         android:layout_marginTop="32dp"/>
 </RelativeLayout>
