--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="dark_blue">#182848</color>
     <color name="dots_indicator_dot_color">#CCCCCC</color>
     <color name="dots_indicator_selected_dot_color">#3F51B5</color>
+    <color name="primaryColor">#1976D2</color> <!-- Azul principal, igual que 'primary' existente -->
+    <color name="primaryTextColor">#23233A</color> <!-- Texto principal, oscuro -->
+    <color name="secondaryTextColor">#888888</color> <!-- Texto secundario, gris -->
 </resources>
