--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -65,6 +65,36 @@
                 android:textStyle="bold"/>
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnCalificar"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:text="Calificar"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/primary"
+            android:textSize="14sp"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="start"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:elevation="2dp"/>
+
+        <Button
+            android:id="@+id/btnReservar"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:text="Reservar"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/primary"
+            android:textSize="14sp"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="start"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:elevation="2dp"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -83,5 +113,21 @@
             android:ellipsize="end"
             android:layout_marginBottom="4dp"/>
 
+        <Button
+            android:id="@+id/btnComentar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Comentar"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:backgroundTint="#3F51B5"
+            android:drawableLeft="@android:drawable/ic_menu_edit"
+            android:drawablePadding="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="-10dp"
+            android:layout_gravity="center_horizontal"
+            android:elevation="4dp"
+            android:padding="8dp"
+            />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
