--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -69,16 +69,20 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <TextView
+        <Button
+            android:id="@+id/btnVerEventos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Eventos del lugar"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:text="Ver Eventos"
+            android:textAllCaps="false"
             android:textStyle="bold"
-            android:textColor="#3F51B5"
+            android:textColor="#fff"
+            android:backgroundTint="#3F51B5"
+            android:elevation="6dp"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="4dp"/>
+            android:layout_marginBottom="4dp"
+            android:padding="8dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvEvents"
@@ -93,16 +97,19 @@
             android:id="@+id/btnSeeReviews"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ver Reseñas y Calificaciones"
+            android:text="Ver Comentarios y Calificaciones del Lugar"
             android:textAllCaps="false"
             android:textStyle="bold"
             android:textColor="#fff"
-            android:backgroundTint="#3F51B5"
+            android:background="@drawable/button_background"
             android:elevation="6dp"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
-            android:padding="14dp"/>
+            android:padding="14dp"
+            android:drawableStart="@drawable/ic_comments"
+            android:drawablePadding="8dp"
+            android:letterSpacing="0.02"/>
     </LinearLayout>
 </ScrollView>
